Manuelt les filer på template folderen